Commit for the first time.

--- a/less/theme.less
+++ b/less/theme.less
@@ -1,496 +1,496 @@
-// ::placeholder {
-// 	color: #fff;
-// 	opacity: 1;
-// }
-// .pure-form input:not([type="radio"]),
-// .pure-form select,
-// .pure-form textarea,
-// input:not([type="radio"]),
-// select,
-// textarea {
-// 	color: #fff;
-// 	background-color: #000;
-// 	border: none;
-// }
-// ::-webkit-input-placeholder {
-// 	color: #ccc;
-// }
-// .fg-spin { //can move to component
-// 	color: #fff;
-// }
-// .data-table,
-// .chart-group,
-// .la-content,
-// .map-content { //can move to component
-// 	.highcharts-background {
-// 		fill: #001c34;
-// 	}
-// }
-// .data-table,
-// .chart-group,
-// .la-content,
-// .map-content {
-// 	.c-chart {
-// 		.highcharts-legend tspan,
-// 		.highcharts-axis-labels text,
-// 		.highcharts-axis-labels text {
-// 			fill: #fff !important;
-// 		}
-// 	}
-// 	.highcharts-point {
-// 		stroke: none;
-// 	}
-// }
-// .chart-group {
-// 	.highcharts-legend-item text {
-// 		fill: #fff !important;
-// 	}
-// }
-// .mode-selection input:checked { //can move to component
-// 	border: 6px solid #fff !important;
-// }
-// .numInput.flatpickr-hour,
-// .numInput.flatpickr-minute {
-// 	color: #393939;
-// 	background: transparent;
-// }
-// #language-menu {
-// 	border: 1px solid #a9a9a9;
-// 	li {
-// 		color: #646263;
-// 	}
-// }
-// #g-header .main-nav .item.active {
-// 	background-color: #004d99 !important;
-// }
-// .table-sort-list {
-// 	color: #fff;
-// 	background-color: #001b34;
-// }
-// .c-hierarchy.tree {
-// 	color: #fff;
-// 	background-color: #001c34;
-// }
-// .c-hierarchy.tree .children .branch:last-child:before,
-// .c-hierarchy.tree .leaf:last-child:before {
-// 	background-color: #001c34;
-// }
-// .c-tree {
-// 	color: #fff;
-// 	background-color: #001c34;
-// }
-// .fg-close {
-// 	color: #fff;
-// }
-// #app-container {
-// 	i.c-checkbox {
-// 		color: #fff;
-// 	}
-// 	i.c-checkbox.fg-checkbox {
-// 		color: #1f84cc;
-// 	}
-// 	.sub-header {
-// 		background-color: #004d99;
-// 		input:not([type="radio"]),
-// 		select,
-// 		textarea {
-// 			color: #fff;
-// 			background-color: #000;
-// 			border: none;
-// 		}
-// 		.c-toggle-btn {
-// 			border: 1px solid #fff;
-// 		}
-// 		.search-interval {
-// 			.time-interval {
-// 				background-color: #000;
-// 			}
-// 		}
-// 	}
-// 	.sub-nav-header {
-// 		background-color: #004d99;
-// 		input,
-// 		i {
-// 			border: none
-// 		}
-// 		input[type="radio"] {
-// 			border: 1px solid #fff;
-// 		}
-// 	}
-// 	.main-dashboard {
-// 		header {
-// 			background-color: #fff;
-// 		}
-// 		.maps {
-// 			background-color: #001c34;
-// 			.floor-map {
-// 				border: 1px solid #1d4d7e;
-// 			}
-// 		}
-// 	}
-// 	#mainFilter,
-// 	#mainMark {
-// 		background-color: #004d99;
-// 		.fg-close {
-// 			color: #4a4a4a;
-// 		}
-// 	}
-// 	.main-filter,
-// 	.main-mark {
-// 		background-color: #012e57;
-// 		.button-group .open-query,
-// 		.button-group .save-query {
-// 			color: #fff;
-// 		}
-// 	}
-// 	.main-chart {
-// 		background-color: #001c34;
-// 	}
-// 	.flow-analysis {
-// 		background-color: #001c34;
-// 		footer {
-// 			color: #fff;
-// 			background-color: #001c34;
-// 		}
-// 	}
-// 	.main-statistic {
-// 		.nav,
-// 		.content {
-// 			background-color: #001c34;
-// 		}
-// 		.nav {
-// 			border: 1px solid #1d4d7e;
-// 			.select-all {
-// 				border-bottom: 1px solid #1d4d7e;
-// 			}
-// 			label {
-// 				color: #fff;
-// 			}
-// 		}
-// 		.content {
-// 			border: 1px solid #1d4d7e;
-// 			.chart-group {
-// 				border: 1px solid #1d4d7e;
-// 			}
-// 			.statistic {
-// 				header {
-// 					color: #fff;
-// 					border-bottom: 1px solid #1d4d7e;
-// 				}
-// 			}
-// 		}
-// 	}
-// 	.data-content,
-// 	.la-content,
-// 	.map-content {
-// 		footer {
-// 			color: #fff;
-// 			select {
-// 				color: #fff;
-// 				border: 1px solid #1d4d7e;
-// 				background-color: #001c34 !important;
-// 			}
-// 		}
-// 	}
-// 	.data-content {
-// 		background-color: #001c34;
-// 		header {
-// 			border-bottom: 1px solid #1d4d7e;
-// 			.fg {
-// 				color: #fff !important;
-// 			}
-// 		}
-// 		.left-nav {
-// 			border-right: 1px solid #2b3f57;
-// 			.header-text {
-// 				color: #fff;
-// 			}
-// 			&.search {
-// 				color: #fff;
-// 				border: 1px solid #1d4d7e;
-// 				header {
-// 					color: #178fe6;
-// 					border-bottom: 1px solid #1d4d7e;
-// 				}
-// 				.content-area {
-// 					input:not([type="radio"]),
-// 					select,
-// 					textarea {
-// 						color: #fff;
-// 						background-color: #000;
-// 						border: none;
-// 					}
-// 				}
-// 			}
-// 			&.tree {
-// 				.header-text {
-// 					color: #178fe6;
-// 				}
-// 				.c-tree {
-// 					color: #fff;
-// 				}
-// 			}
-// 			.subframe {
-// 				background-color: #012e57;
-// 			}
-// 		}
-// 		.data-table {
-// 			&.manage {
-// 				border: 1px solid #1d4d7e;
-// 				.table-100 .button > div,
-// 				.table-100 .button > span,
-// 				.table-100 .button button.analysis,
-// 				.table-100 tbody td span a {
-// 					color: #fff;
-// 				}
-// 			}
-// 			.file-options {
-// 				color: #fff;
-// 			}
-// 			.chart.connections {
-// 				.highcharts-point {
-// 					fill: #00e76e;
-// 				}
-// 			}
-// 		}
-// 		.download-btn {
-// 			button {
-// 				background-color: #1f84cc;
-// 				color: #fff;
-// 				&:hover {
-// 					background-color: #62ade0;
-// 				}
-// 			}
-// 		}
-// 		.floor-plan,
-// 		.floor-map {
-// 			border: 1px solid #1d4d7e;
-// 		}
-// 	}
-// 	.right-content {
-// 		header {
-// 			color: #178fe6;
-// 		}
-// 	}
-// 	.datepicker {
-// 		color: #fff;
-// 		.fg-calendar {
-// 			border: none;
-// 		}
-// 	}
-// 	.search-bar {
-// 		.datepicker {
-// 			background: none;
-// 		}
-// 	}
-// 	.filter-header {
-// 		color: #fff;
-// 		background-color: #012e57;
-// 		input {
-// 			border: none;
-// 		}
-// 		.fg-calendar {
-// 			color: #fff;
-// 			border: none;
-// 		}
-// 	}
-// }
-// #areaMapUpload,
-// #ownerPhotoUpload,
-// footer {
-// 	button {
-// 		border: 1px solid #2b3f57;
-// 	}
-// }
-// .c-menu {
-// 	border: none;
-// 	&.sub > * {
-// 		border: none;
-// 	}
-// }
-// .c-box {
-// 	& > header > i {
-// 		color: #fff;
-// 	}
-// 	& > header:not(.legend) {
-// 		border-bottom: 1px solid #2b3f57;
-// 	}
-// 	& > footer {
-// 		border-top: 1px solid #2b3f57;
-// 		button {
-// 			border: 1px solid #2b3f57;
-// 		}
-// 	}
-// 	&.dialog {
-// 		color: #fff;
-// 		border: 1px solid #1d4d7e;
-// 		header {
-// 			color: #178fe6;
-// 			background-color: #003566;
-// 			border-bottom: 1px solid #1d4d7e;
-// 		}
-// 		& > .content {
-// 			background-color: #001b34;
-// 		}
-// 	}
-// 	& > footer {
-// 		background-color: #001b34;
-// 		border-top: 1px solid #1d4d7e;
-// 	}
-// }
-// #modalWindow-dialog {
-// 	header {
-// 		color: #178fe6;
-// 	}
-// }
-// #modalWindow-content,
-// .modal-dialog {
-// 	.wide-dialog {
-// 		.right,
-// 		.left.border,
-// 		&.add-seat .right-content {
-// 			border: 1px solid #1d4d7e;
-// 		}
-// 		.right .field label {
-// 			color: #fff;
-// 		}
-// 		&.add-floor .text span {
-// 			color: #1f84cc;
-// 		}
-// 	}
-// 	.content {
-// 		color: #fff;
-// 		input,
-// 		select,
-// 		textarea {
-// 			border: 1px solid #1d4d7e;
-// 		}
-// 	}
-// 	.fg {
-// 		border: none !important;
-// 	}
-// 	.json-data {
-// 		background-color: #fff;
-// 	}
-// }
-// .pure-form input[readonly],
-// .pure-form select[readonly],
-// .pure-form textarea[readonly],
-// .pure-form input[type=text][disabled] {
-// 	background-color: #000;
-// }
-// .c-table {
-// 	tbody,
-// 	thead {
-// 		color: #fff;
-// 	}
-// 	thead {
-// 		background-color: #004087;
-// 	}
-// 	&:not(.bland):not(.c-grid) tbody tr:nth-child(odd) {
-// 		background-color: #012e57;
-// 	}
-// 	&:not(.bland):not(.c-grid) tbody tr:nth-child(even) {
-// 		background-color: #001c34;
-// 	}
-// 	&:not(.nohover) tbody tr:hover:not(.selected) {
-// 		background-color: #21587f !important;
-// 	}
-// }
-// .c-margin {
-// 	margin-bottom: 0;
-// }
-// .c-button-group .thumb {
-// 	&.selected {
-// 		background-color: #004087;
-// 		border: 1px solid #2b3f57;
-// 	}
-// 	&:not(.selected) {
-// 		color: #fff;
-// 		background: none;
-// 		border: 1px solid #2b3f57;
-// 		&:not(:disabled):hover {
-// 			background-color: #62ade0;
-// 			border: 1px solid #2b3f57;
-// 		}
-// 	}
-// }
-// .la-content {
-// 	.c-button-group .thumb {
-// 		&:not(.selected) {
-// 			background-color: #fff;
-// 			color: #646263;
-// 			border: #2b3f57;
-// 			&:not(:disabled):hover {
-// 				color: #fff;
-// 				background-color: #62ade0;
-// 				border: none;
-// 			}
-// 		}
-// 	}
-// 	select {
-// 		color: #000;
-// 		background: #fff;
-// 	}
-// }
-// .c-page-nav .thumb {
-// 	&:not(.selected) {
-// 		background: none;
-// 		color: #fff;
-// 		border: 1px solid #1d4d7e;
-// 		&:not(:disabled):hover {
-// 			background-color: #62ade0;
-// 			border: 1px solid #1d4d7e;
-// 		}
-// 	}
-// 	&.current {
-// 		color: #fff;
-// 		background-color: #1f84cc;
-// 	}
-// }
-// #dashboardModalDialog-content {
-// 	.main-table {
-// 		thead tr {
-// 			color: #fff;
-// 		}
-// 		th, td {
-// 			border: 1px solid #1d4d7e !important;
-// 		}
-// 	}
-// 	.main-content {
-// 		border: 1px solid #1d4d7e;
-// 		.nav {
-// 			border-right: 1px solid #1d4d7e;
-// 		}
-// 		.content {
-// 			color: #fff;
-// 			background-color: #001b34;
-// 		}
-// 	}
-// }
-// #floorModalDialog-content .c-tree ul li:last-child:before {
-// 	background-color: #001b34;
-// }
-// #tagModalDialog-content {
-// 	.github-picker {
-// 		background-color: #001b34 !important;
-// 		border: 1px solid #fff !important;
-// 	}
-// }
-// .c-tree ul li:last-child:before {
-// 	background-color: #001c34;
-// }
-// .c-modal > .dialog .c-date-picker i.fg {
-// 	border: 1px solid #2b3f57;
-// }
-// #g-popover input {
-// 	background: #fff;
-// 	color: #000;
-// }
-// main.main {
-// 	background-color: #001c34;
-// }
-// footer.footer {
-// 	color: #fff;
-// 	background-color: #001c34;
-// }
+::placeholder {
+	color: #fff;
+	opacity: 1;
+}
+.pure-form input:not([type="radio"]),
+.pure-form select,
+.pure-form textarea,
+input:not([type="radio"]),
+select,
+textarea {
+	color: #fff;
+	background-color: #000;
+	border: none;
+}
+::-webkit-input-placeholder {
+	color: #ccc;
+}
+.fg-spin { //can move to component
+	color: #fff;
+}
+.data-table,
+.chart-group,
+.la-content,
+.map-content { //can move to component
+	.highcharts-background {
+		fill: #001c34;
+	}
+}
+.data-table,
+.chart-group,
+.la-content,
+.map-content {
+	.c-chart {
+		.highcharts-legend tspan,
+		.highcharts-axis-labels text,
+		.highcharts-axis-labels text {
+			fill: #fff !important;
+		}
+	}
+	.highcharts-point {
+		stroke: none;
+	}
+}
+.chart-group {
+	.highcharts-legend-item text {
+		fill: #fff !important;
+	}
+}
+.mode-selection input:checked { //can move to component
+	border: 6px solid #fff !important;
+}
+.numInput.flatpickr-hour,
+.numInput.flatpickr-minute {
+	color: #393939;
+	background: transparent;
+}
+#language-menu {
+	border: 1px solid #a9a9a9;
+	li {
+		color: #646263;
+	}
+}
+#g-header .main-nav .item.active {
+	background-color: #004d99 !important;
+}
+.table-sort-list {
+	color: #fff;
+	background-color: #001b34;
+}
+.c-hierarchy.tree {
+	color: #fff;
+	background-color: #001c34;
+}
+.c-hierarchy.tree .children .branch:last-child:before,
+.c-hierarchy.tree .leaf:last-child:before {
+	background-color: #001c34;
+}
+.c-tree {
+	color: #fff;
+	background-color: #001c34;
+}
+.fg-close {
+	color: #fff;
+}
+#app-container {
+	i.c-checkbox {
+		color: #fff;
+	}
+	i.c-checkbox.fg-checkbox {
+		color: #1f84cc;
+	}
+	.sub-header {
+		background-color: #004d99;
+		input:not([type="radio"]),
+		select,
+		textarea {
+			color: #fff;
+			background-color: #000;
+			border: none;
+		}
+		.c-toggle-btn {
+			border: 1px solid #fff;
+		}
+		.search-interval {
+			.time-interval {
+				background-color: #000;
+			}
+		}
+	}
+	.sub-nav-header {
+		background-color: #004d99;
+		input,
+		i {
+			border: none
+		}
+		input[type="radio"] {
+			border: 1px solid #fff;
+		}
+	}
+	.main-dashboard {
+		header {
+			background-color: #fff;
+		}
+		.maps {
+			background-color: #001c34;
+			.floor-map {
+				border: 1px solid #1d4d7e;
+			}
+		}
+	}
+	#mainFilter,
+	#mainMark {
+		background-color: #004d99;
+		.fg-close {
+			color: #4a4a4a;
+		}
+	}
+	.main-filter,
+	.main-mark {
+		background-color: #012e57;
+		.button-group .open-query,
+		.button-group .save-query {
+			color: #fff;
+		}
+	}
+	.main-chart {
+		background-color: #001c34;
+	}
+	.flow-analysis {
+		background-color: #001c34;
+		footer {
+			color: #fff;
+			background-color: #001c34;
+		}
+	}
+	.main-statistic {
+		.nav,
+		.content {
+			background-color: #001c34;
+		}
+		.nav {
+			border: 1px solid #1d4d7e;
+			.select-all {
+				border-bottom: 1px solid #1d4d7e;
+			}
+			label {
+				color: #fff;
+			}
+		}
+		.content {
+			border: 1px solid #1d4d7e;
+			.chart-group {
+				border: 1px solid #1d4d7e;
+			}
+			.statistic {
+				header {
+					color: #fff;
+					border-bottom: 1px solid #1d4d7e;
+				}
+			}
+		}
+	}
+	.data-content,
+	.la-content,
+	.map-content {
+		footer {
+			color: #fff;
+			select {
+				color: #fff;
+				border: 1px solid #1d4d7e;
+				background-color: #001c34 !important;
+			}
+		}
+	}
+	.data-content {
+		background-color: #001c34;
+		header {
+			border-bottom: 1px solid #1d4d7e;
+			.fg {
+				color: #fff !important;
+			}
+		}
+		.left-nav {
+			border-right: 1px solid #2b3f57;
+			.header-text {
+				color: #fff;
+			}
+			&.search {
+				color: #fff;
+				border: 1px solid #1d4d7e;
+				header {
+					color: #178fe6;
+					border-bottom: 1px solid #1d4d7e;
+				}
+				.content-area {
+					input:not([type="radio"]),
+					select,
+					textarea {
+						color: #fff;
+						background-color: #000;
+						border: none;
+					}
+				}
+			}
+			&.tree {
+				.header-text {
+					color: #178fe6;
+				}
+				.c-tree {
+					color: #fff;
+				}
+			}
+			.subframe {
+				background-color: #012e57;
+			}
+		}
+		.data-table {
+			&.manage {
+				border: 1px solid #1d4d7e;
+				.table-100 .button > div,
+				.table-100 .button > span,
+				.table-100 .button button.analysis,
+				.table-100 tbody td span a {
+					color: #fff;
+				}
+			}
+			.file-options {
+				color: #fff;
+			}
+			.chart.connections {
+				.highcharts-point {
+					fill: #00e76e;
+				}
+			}
+		}
+		.download-btn {
+			button {
+				background-color: #1f84cc;
+				color: #fff;
+				&:hover {
+					background-color: #62ade0;
+				}
+			}
+		}
+		.floor-plan,
+		.floor-map {
+			border: 1px solid #1d4d7e;
+		}
+	}
+	.right-content {
+		header {
+			color: #178fe6;
+		}
+	}
+	.datepicker {
+		color: #fff;
+		.fg-calendar {
+			border: none;
+		}
+	}
+	.search-bar {
+		.datepicker {
+			background: none;
+		}
+	}
+	.filter-header {
+		color: #fff;
+		background-color: #012e57;
+		input {
+			border: none;
+		}
+		.fg-calendar {
+			color: #fff;
+			border: none;
+		}
+	}
+}
+#areaMapUpload,
+#ownerPhotoUpload,
+footer {
+	button {
+		border: 1px solid #2b3f57;
+	}
+}
+.c-menu {
+	border: none;
+	&.sub > * {
+		border: none;
+	}
+}
+.c-box {
+	& > header > i {
+		color: #fff;
+	}
+	& > header:not(.legend) {
+		border-bottom: 1px solid #2b3f57;
+	}
+	& > footer {
+		border-top: 1px solid #2b3f57;
+		button {
+			border: 1px solid #2b3f57;
+		}
+	}
+	&.dialog {
+		color: #fff;
+		border: 1px solid #1d4d7e;
+		header {
+			color: #178fe6;
+			background-color: #003566;
+			border-bottom: 1px solid #1d4d7e;
+		}
+		& > .content {
+			background-color: #001b34;
+		}
+	}
+	& > footer {
+		background-color: #001b34;
+		border-top: 1px solid #1d4d7e;
+	}
+}
+#modalWindow-dialog {
+	header {
+		color: #178fe6;
+	}
+}
+#modalWindow-content,
+.modal-dialog {
+	.wide-dialog {
+		.right,
+		.left.border,
+		&.add-seat .right-content {
+			border: 1px solid #1d4d7e;
+		}
+		.right .field label {
+			color: #fff;
+		}
+		&.add-floor .text span {
+			color: #1f84cc;
+		}
+	}
+	.content {
+		color: #fff;
+		input,
+		select,
+		textarea {
+			border: 1px solid #1d4d7e;
+		}
+	}
+	.fg {
+		border: none !important;
+	}
+	.json-data {
+		background-color: #fff;
+	}
+}
+.pure-form input[readonly],
+.pure-form select[readonly],
+.pure-form textarea[readonly],
+.pure-form input[type=text][disabled] {
+	background-color: #000;
+}
+.c-table {
+	tbody,
+	thead {
+		color: #fff;
+	}
+	thead {
+		background-color: #004087;
+	}
+	&:not(.bland):not(.c-grid) tbody tr:nth-child(odd) {
+		background-color: #012e57;
+	}
+	&:not(.bland):not(.c-grid) tbody tr:nth-child(even) {
+		background-color: #001c34;
+	}
+	&:not(.nohover) tbody tr:hover:not(.selected) {
+		background-color: #21587f !important;
+	}
+}
+.c-margin {
+	margin-bottom: 0;
+}
+.c-button-group .thumb {
+	&.selected {
+		background-color: #004087;
+		border: 1px solid #2b3f57;
+	}
+	&:not(.selected) {
+		color: #fff;
+		background: none;
+		border: 1px solid #2b3f57;
+		&:not(:disabled):hover {
+			background-color: #62ade0;
+			border: 1px solid #2b3f57;
+		}
+	}
+}
+.la-content {
+	.c-button-group .thumb {
+		&:not(.selected) {
+			background-color: #fff;
+			color: #646263;
+			border: #2b3f57;
+			&:not(:disabled):hover {
+				color: #fff;
+				background-color: #62ade0;
+				border: none;
+			}
+		}
+	}
+	select {
+		color: #000;
+		background: #fff;
+	}
+}
+.c-page-nav .thumb {
+	&:not(.selected) {
+		background: none;
+		color: #fff;
+		border: 1px solid #1d4d7e;
+		&:not(:disabled):hover {
+			background-color: #62ade0;
+			border: 1px solid #1d4d7e;
+		}
+	}
+	&.current {
+		color: #fff;
+		background-color: #1f84cc;
+	}
+}
+#dashboardModalDialog-content {
+	.main-table {
+		thead tr {
+			color: #fff;
+		}
+		th, td {
+			border: 1px solid #1d4d7e !important;
+		}
+	}
+	.main-content {
+		border: 1px solid #1d4d7e;
+		.nav {
+			border-right: 1px solid #1d4d7e;
+		}
+		.content {
+			color: #fff;
+			background-color: #001b34;
+		}
+	}
+}
+#floorModalDialog-content .c-tree ul li:last-child:before {
+	background-color: #001b34;
+}
+#tagModalDialog-content {
+	.github-picker {
+		background-color: #001b34 !important;
+		border: 1px solid #fff !important;
+	}
+}
+.c-tree ul li:last-child:before {
+	background-color: #001c34;
+}
+.c-modal > .dialog .c-date-picker i.fg {
+	border: 1px solid #2b3f57;
+}
+#g-popover input {
+	background: #fff;
+	color: #000;
+}
+main.main {
+	background-color: #001c34;
+}
+footer.footer {
+	color: #fff;
+	background-color: #001c34;
+}
