--- a/less/app-dark.less
+++ b/less/app-dark.less
@@ -1,7 +1,7 @@
 @import "dark.less";
 @import "../node_modules/react-ui/less/react-ui-core.less";
 @import "app.less";
-@import "../node_modules/chewbacca-ui/less/app.less";
+@import "app.less";
 @import "theme.less";
 @import "login.less";
 @import "logview.less";
