--- a/less/app-plain.less
+++ b/less/app-plain.less
@@ -1,6 +1,6 @@
 @import "../node_modules/react-ui/less/react-ui-dark.less";
 @import "app.less";
-@import "../node_modules/chewbacca-ui/less/app.less";
+@import "app.less";
 @import "login.less";
 @import "logview.less";
 @import "user.less";
