--- a/less/modal.less
+++ b/less/modal.less
@@ -1000,3 +1000,18 @@
 	max-height: 550px;
 	min-width: 400px;
 }
+#g-user-accounts-edit {
+  .c-box.dialog.react-draggable {
+    max-width: 600px;
+    > .content {
+      display: flex;
+      .c-form > div input, 
+      .c-form > div div, {
+         width: 250px;
+      }
+      .c-form > div.selected {
+        margin-right: 6px;
+      }
+    }
+  }
+}
