Update less files.

--- a/less/app-dark.less
+++ b/less/app-dark.less
@@ -1,5 +1,6 @@
 @import "dark.less";
 @import "../node_modules/react-ui/less/react-ui-core.less";
 @import "app.less";
+@import "modal.less";
 @import "theme.less";
 @import "login.less";
