--- a/less/app.less
+++ b/less/app.less
@@ -1136,7 +1136,7 @@ footer.footer {
 	.main-dashboard {
 		.charts {
 			width: 100%;
-			height: 400px;
+			height: 460px;
 			.chart-group {
 				float: left;
 				width: 32%;
@@ -1144,6 +1144,9 @@ footer.footer {
 				margin: 5px;
 				border: 1px solid #ccc;
 				border-radius: 5px;
+				&.bar {
+					width: 66%;
+				}
 				header {
 					color: #004d93;
 					font-weight: bold;
@@ -1163,31 +1166,26 @@ footer.footer {
 			}
 		}
 		.maps {
+			position: relative;
 			width: 100%;
 			height: 100%;
 			min-height: 94vh;
 			margin-top: 5px;
-			.c-tabs-menu {
-				border: none;
-				li {
-					padding: 15px;
-					.count {
-						background-color: #d0021b;
-						color: #fff;
-						border-radius: 100%;
-						font-size: 5px;
-						padding: 2px;
-						margin-left: 5px;
-					}
+			.secondary-btn-group {
+				padding: 5px 10px;
+				button {
+					margin-right: 0;
 				}
 			}
 			.floor-map {
 				text-align: center;
-				border: 1px solid #ccc;
 				.drop-down {
 					position: absolute;
 					top: 10px;
 					right: 10px;
+				}
+				.floor-map-area {
+					margin-top: 65px;
 				}
 			}
 		}
