--- a/less/app.less
+++ b/less/app.less
@@ -1136,16 +1136,16 @@ footer.footer {
 	.main-dashboard {
 		.charts {
 			width: 100%;
-			height: 460px;
+			display: flex;
+			flex-wrap: wrap;
 			.chart-group {
-				float: left;
-				width: 32%;
-				height: 100%;
+				width: 33%;
 				margin: 5px;
 				border: 1px solid #ccc;
 				border-radius: 5px;
 				&.bar {
-					width: 66%;
+					width: 65.8%;
+					height: 460px;
 				}
 				header {
 					color: #004d93;
