--- a/less/modal.less
+++ b/less/modal.less
@@ -141,6 +141,8 @@
 		padding: 20px 20px 15px 20px;
 	}
 	.json-data {
+		height: 345px;
+		overflow-y: scroll;
 		border: 1px solid #ccc;
 		border-radius: 10px;
 		& > li {
