Add more Syslog Config Pie chart and Disk Usage Metric chart.

--- a/less/app.less
+++ b/less/app.less
@@ -1147,6 +1147,9 @@ footer.footer {
 					width: 65.8%;
 					height: 460px;
 				}
+				&.metric {
+					height: 138px;
+				}
 				header {
 					color: #004d93;
 					font-weight: bold;
@@ -1162,6 +1165,11 @@ footer.footer {
 				.c-chart.table {
 					height: 345px;
 					overflow-y: auto;
+				}
+				.disk-usage {
+					.item .value {
+						color: #d0021b;
+					}
 				}
 			}
 		}
