--- a/less/modal.less
+++ b/less/modal.less
@@ -744,6 +744,14 @@
 			padding: 10px !important;
 			border: 1px solid #ccc !important;
 		}
+		.src-ip,
+		.dest-ip {
+			width: 220px;
+		}
+		.src-port,
+		.dest-port {
+			width: 175px;
+		}
 		.severity {
 			display: block;
 			width: 50%;
