Update Dashboard api call logic and styles.

--- a/less/app.less
+++ b/less/app.less
@@ -1139,12 +1139,12 @@ footer.footer {
 			display: flex;
 			flex-wrap: wrap;
 			.chart-group {
-				width: 32.64%;
+				width: 24.4%; //32.64%
 				margin: 5px;
 				border: 1px solid #ccc;
 				border-radius: 5px;
 				&.bar {
-					width: 65.8%;
+					width: 74.25%; //65.8%
 					height: 460px;
 				}
 				&.metric {
