--- a/less/app.less
+++ b/less/app.less
@@ -1177,7 +1177,6 @@ footer.footer {
 			position: relative;
 			width: 100%;
 			height: 100%;
-			min-height: 94vh;
 			margin-top: 5px;
 			.secondary-btn-group {
 				padding: 5px 10px;
@@ -1186,14 +1185,56 @@ footer.footer {
 				}
 			}
 			.floor-map {
-				text-align: center;
 				.drop-down {
 					position: absolute;
-					top: 10px;
-					right: 10px;
+					top: 4px;
+					left: 130px;
 				}
-				.floor-map-area {
-					margin-top: 65px;
+				& > .content {
+					width: 100%;
+					margin-top: 55px;
+					overflow: hidden;
+					padding-left: 10px;
+					padding-right: 10px;
+					ul {
+						float: left;
+						width: 18%;
+						border-top: 1px solid #d9d9d9;
+						border-right: 1px solid #d9d9d9;
+						border-left: 1px solid #d9d9d9;
+						max-height: 84vh;
+						overflow-y: scroll;
+						li {
+							position: relative;
+							color: #5e5e5e;
+							height: 70px;
+							border-bottom: 2px solid #d9d9d9;
+							cursor: pointer;
+							.info {
+								font-size: 18px;
+								padding: 8px 10px;
+								span {
+									display: block;
+									margin-bottom: 2px;
+								}
+							}
+							.count {
+								position: absolute;
+								top: 10px;
+								right: 10px;
+								width: 50px;
+								padding: 2px;
+								color: #fff;
+								text-align: center;
+								border-radius: 15px;
+							}
+						}
+					}
+					.map {
+						float: left;
+						width: 82%;
+						text-align: center;
+					}
 				}
 			}
 		}
