Implement the Dashboard Floor Map and details dialog using mock data.

--- a/less/app.less
+++ b/less/app.less
@@ -18,6 +18,12 @@ footer.footer {
     bottom: 2px;
 	}
 }
+/* Temporary Fix for Gis library bug */
+.leaflet-marker-icon.gis-divIcon > div.gis-spot {
+	margin-bottom: 0;
+	padding-bottom: 12px;
+}
+/*******/
 #language-menu {
 	left: auto !important;
 	top: 40px !important;
