Implement new layout for the Alert details private area. Add a new safety scan section.

--- a/less/app.less
+++ b/less/app.less
@@ -987,7 +987,6 @@ footer.footer {
 		}
 		tbody td {
 			text-align: left;
-			padding: 7px 0 7px 30px;
 			cursor: pointer;
 			&.align-center {
 				text-align: center;
@@ -995,12 +994,6 @@ footer.footer {
 			&.c-info {
 				cursor: text;
 			}
-			// &.srcIp,
-			// &.srcPort,
-			// &.destIp,
-			// &.destPort {
-			// 	text-align: right;
-			// }
 			a {
 				text-decoration: underline;
 				&.no-underline {
@@ -1209,7 +1202,7 @@ footer.footer {
 						border-right: 1px solid #d9d9d9;
 						border-left: 1px solid #d9d9d9;
 						max-height: 84vh;
-						overflow-y: scroll;
+						overflow-y: auto;
 						li {
 							position: relative;
 							color: #5e5e5e;
