--- a/less/app.less
+++ b/less/app.less
@@ -1198,15 +1198,15 @@ footer.footer {
 					ul {
 						float: left;
 						width: 18%;
-						border-top: 1px solid #d9d9d9;
-						border-right: 1px solid #d9d9d9;
-						border-left: 1px solid #d9d9d9;
 						max-height: 84vh;
 						overflow-y: auto;
 						li {
 							position: relative;
 							color: #5e5e5e;
 							height: 70px;
+							border-top: 1px solid #d9d9d9;
+							border-right: 1px solid #d9d9d9;
+							border-left: 1px solid #d9d9d9;
 							border-bottom: 2px solid #d9d9d9;
 							cursor: pointer;
 							.info {
@@ -1390,7 +1390,6 @@ footer.footer {
 			}
 		}
 	}
-
 	.config-header {
 		.breadcrumb {
 			position: absolute;
@@ -1516,7 +1515,6 @@ footer.footer {
 			}
 		}
 	}
-
 	.sub-nav-header {
 		position: relative;
 		color: #fff;
@@ -1602,15 +1600,62 @@ footer.footer {
 			right: 15px;
 		}
 	}
+	.safety-scan-content {
+		overflow: hidden;
+		max-height: 362px;
+		overflow-y: auto;
+		border: 1px solid #ccc;
+		.nav {
+			float: left;
+			width: 180px;
+			min-height: 360px;
+			background-color: #fff;
+			border-right: 1px solid #ccc;
+			li {
+				font-size: 12px;
+				padding-top: 5px;
+				padding-bottom: 5px;
+				overflow: hidden;
+				border-bottom: 1px solid #ccc;
+				span {
+					padding: 10px;
+					display: block;
+					cursor: pointer;
+					&.name {
+						float: left;
+						color: #000;
+					}
+					&.count {
+						float: right;
+						font-size: 10px;
+					}
+				}
+			}
+		}
+		.content {
+			position: relative;
+			float: left;
+			width: 500px;
+			.updates {
+				margin-top: 6px;
+				margin-bottom: 20px;
+			}
+			button {
+				position: absolute;
+				top: 10px;
+				right: 10px;
+			}
+		}
+	}
 }
 #gisMap {
 	width: 100%;
-	height: 88vh;
+	height: 86vh;
 	&.full {
 		height: 95vh;
 	}
 	&.fit {
-		height: 50vh;
+		height: 75vh;
 	}
 	.map-tooltip {
 		.key {
